chore(tests): replace ts-jest with @swc/jest proof of concept

--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "postprocess-dist": "ts-node-script config/postprocessDist.ts",
     "clean": "rimraf -r dist coverage lib temp",
     "ci:precheck": "node config/precheck.js",
-    "test": "jest --config ./config/jest.config.js",
+    "test": "jest --config ./config/jest.config.js --no-cache",
     "test:debug": "node --inspect-brk node_modules/.bin/jest --config ./config/jest.config.js --runInBand --testTimeout 99999",
     "test:ci": "npm run test:coverage && npm run test:memory",
     "test:watch": "jest --config ./config/jest.config.js --watch",
@@ -103,6 +103,8 @@
     "@babel/parser": "7.19.1",
     "@graphql-tools/schema": "9.0.4",
     "@rollup/plugin-node-resolve": "11.2.1",
+    "@swc/core": "1.2.171",
+    "@swc/jest": "0.2.22",
     "@testing-library/react": "13.4.0",
     "@testing-library/react-12": "npm:@testing-library/react@^12",
     "@testing-library/react-hooks": "8.0.1",
